[package]
name = "hue-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.16"
serde_json = "1.0.83"
serde = { version = "1.0.143", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
whoami = "0.9.0"
